[package]
name = "masm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
paste = "1.0"
parking_lot = "0.12"
capstone = "0.11"
[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["memoryapi"] }
